feat: header component added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<section id="header">
+  <nav id="navbar">
+    <ul>
+      <li class="burger" (click)="toggleMenu()">
+        <i class="material-icons">{{ isMenuOpen ? "close" : "menu" }}</i>
+      </li>
+      
+      <li class="menu" [class.is-open]="isMenuOpen">
+        <!-- <a href="#" class="menu__item">Conversor de moedas</a> -->
+        <a href="/moedas" class="menu__item">Lista de símbolos</a>
+        <a class="menu__item">Converter real para dolar</a>
+        <a class="menu__item">Converter moedas</a>
+      </li>
+    </ul>
+  </nav>
+  
+  <div id="title">
+    <h1> Saiba as moedas disponíveis para câmbio </h1>
+  </div>
+</section>
