--- a/src/app/components/listagem/listagem.component.scss
+++ b/src/app/components/listagem/listagem.component.scss
@@ -5,7 +5,6 @@
 
     .search__group{
         display: flex;
-        justify-content: flex-end;
         gap: 1rem;
         flex-wrap: wrap;
         margin-bottom: 1rem;
@@ -14,6 +13,7 @@
             border: 1px solid #9fe870;
             border-radius: 1.25rem;
             padding: .75rem 2rem;
+            flex: 1 0 auto;
         }
     }
 
