feat: currency converter page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
         <!-- <a href="#" class="menu__item">Conversor de moedas</a> -->
         <a href="/moedas" class="menu__item">Lista de símbolos</a>
         <a class="menu__item">Converter real para dolar</a>
-        <a class="menu__item">Converter moedas</a>
+        <a href="/conversor" class="menu__item">Converter moedas</a>
       </li>
     </ul>
   </nav>
