--- a/src/app/components/conversor/conversor.component.html
+++ b/src/app/components/conversor/conversor.component.html
@@ -1,26 +1,38 @@
 <app-header></app-header>
 
 <section id="conversor">
-    <div class="card">
-        <div class="converter">
-            <div class="input__group">
-                <span>Quantia</span>
-                <input type="text" class="input__converter" value="1.000">
-            </div>
-            <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24"><path fill-rule="evenodd" d="m16.629 11.999-1.2-1.2 3.085-3.086H2.572V5.999h15.942L15.43 2.913l1.2-1.2 4.543 4.543a.829.829 0 0 1 0 1.2l-4.543 4.543Zm-9.257-.001 1.2 1.2-3.086 3.086h15.943v1.714H5.486l3.086 3.086-1.2 1.2-4.543-4.543a.829.829 0 0 1 0-1.2l4.543-4.543Z" clip-rule="evenodd"></path></svg>
-            <div class="input__group">
-                <span>Converter</span>
-                <input type="text" class="input__converter" value="1.000">
-            </div>
-        </div>
-
-        <div class="card__info">
-            <div>
-                <h1>R$1,000 BRL = € <span>0,1802</span> EUR </h1>
-                <p>Câmbio comercial às 19:51 UTC</p>
-            </div>
-            <app-button [buttonText]="'Enviar dinheiro'"></app-button>
-        </div>
+  <div class="card">
+    <div class="converter">
+      <div class="input__group">
+        <span>Moeda de origem</span>
+        <select class="input__converter" [(ngModel)]="originCurrency" (change)="updateOriginCurrency(originCurrency)">
+          <option *ngFor="let currency of availableCurrencies" [value]="currency">{{currency}}</option>
+        </select>
+      </div>
+      <div class="input__group">
+        <span>Valor para converter</span>
+        <input type="text" class="input__converter" [(ngModel)]="amountToConvert" (input)="onAmountChange($event)">
+      </div>
+      <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24">
+        <path fill-rule="evenodd" d="m16.629 11.999-1.2-1.2 3.085-3.086H2.572V5.999h15.942L15.43 2.913l1.2-1.2 4.543 4.543a.829.829 0 0 1 0 1.2l-4.543 4.543Zm-9.257-.001 1.2 1.2-3.086 3.086h15.943v1.714H5.486l3.086 3.086-1.2 1.2-4.543-4.543a.829.829 0 0 1 0-1.2l4.543-4.543Z" clip-rule="evenodd"></path>
+      </svg>
+      <div class="input__group">
+        <span>Moeda de destino</span>
+        <select class="input__converter" [(ngModel)]="targetCurrency" (change)="updateTargetCurrency(targetCurrency)">
+          <option *ngFor="let currency of availableCurrencies" [value]="currency">{{currency}}</option>
+        </select>
+      </div>
+      <div class="input__group">
+        <span>Valor convertido</span>
+        <input type="text" class="input__converter" [value]="convertedAmount" disabled>
+      </div>
     </div>
-
+    <div class="card__info">
+      <div>
+        <h1>{{amountToConvert | number:'1.0-2'}} {{originCurrency}} = <span>{{convertedAmount | number:'1.0-4'}}</span> {{targetCurrency}}</h1>
+        <p>Câmbio comercial às {{lastUpdated}} UTC</p>
+      </div>
+      <app-button [buttonText]="'Enviar dinheiro'"></app-button>
+    </div>
+  </div>
 </section>
