--- a/src/app/components/conversor/conversor.component.scss
+++ b/src/app/components/conversor/conversor.component.scss
@@ -24,15 +24,25 @@
             gap: 2rem;
 
             .input__group {
-    
+
                 .input__converter {
-                    border: 1px solid #454745;
-                    border-radius: 8px;
-                    padding: 1rem 1rem;
-                    font-size: 1.5rem;
-                    font-weight: 600;
-                    display: block;
-                    
+                  appearance: none;
+                  /*  safari  */
+                  -webkit-appearance: none;
+                  /*  other styles for aesthetics */
+                  border: 1px solid #454745;
+                  border-radius: 8px;
+                  padding: 1rem 1rem;
+                  font-size: 1.5rem;
+                  font-weight: 600;
+                  display: block;
+                  background-color: transparent;
+
+                  option {
+                    font-size: 1rem;
+                    font-weight: normal;
+                  }
+
                 }
 
                 span {
@@ -72,6 +82,4 @@
         }
 
     }
-
-    
 }
