--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -2,8 +2,8 @@
 
 <section id="listagem">
     <div class="search__group">
-        <input type="text" placeholder="Código ou nome">
-        <app-button [buttonText]="'Pesquisar'"></app-button>
+        <input type="text" placeholder="Código ou nome" [(ngModel)]="searchText">
+        <app-button [buttonText]="'Pesquisar'" (click)="searchCurrencies()"></app-button>
     </div>
 
     <mat-table class="table" [dataSource]="paginatedCurrencies">
